fix: fix example script

--- a/examples/default/index.html
+++ b/examples/default/index.html
@@ -60,7 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.4/dist/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.5/dist/umd/index.min.js"></script>
 
-    <script src="../../dist/bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@1inch/embedded-widget@0.0.1/bundle.js"></script>
     <script src="./index.js"></script>
 </head>
 <body>
